feat(docker): working training image
Edit Dockerfile and compose to permit a clean two stages image for training.

The first stage install mmcv (and mmengine) with CUDA support. The image is 14+GB. The second image is taking the compiled version from the first stage and install the mmdet repo on a specific checkout. It "only" takes 8+GB, thanks to the torch image is running on its runtime version.

The size of the images are only illustrative. It heavily depends of the torch base images' sizes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
         # Fill with the correct commit of the repo
         # Set the SHA of the commit, ensure logging exact version of the repo
         COMMIT: ${COMMIT}
+    command: >
+      python tools/train.py 
+      configs/reid/detection/pstr_r50.py
+      --cfg-options
+      train_dataloader.dataset.data_root=/dataset/mmlab
     environment:
         TERM: 'screen-256color'
 
